--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="numbertext"></div>
                 <div class="slide-content">
                     <h1 class="content1">Enjoy Our <br /> Delicious Meal</h1>
-                    <button class="button">book your table</button>
+                    <!-- <button class="button">book your table</button> -->
                 </div>
                 <!-- <img src="https://images.unsplash.com/photo-1484325881845-65073528922e?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTF8fHJlc3RhdXJhbnQlMjBmb29kfGVufDB8fDB8fHww"
                 style="width:100%;max-height: 610px;"> -->
