--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                         <h2 style="color: rgb(245, 37, 47); font-weight:bold; margin: 0;">
                             Kadai Paneer
                         </h2>
-                        <p style="text-align: center; margin: 0;">Paneer and bell peppers cooked in a spicy tomato-based gravy with aromatic spices.</p>
+                        <p style="text-align: center; margin: 0;">Paneer and bell peppers cooked in a spicy tomato-based
+                            gravy with aromatic spices.</p>
                         <span>Price: 320 Rs</span>
                     </li>
                     <li class="card">
@@ -120,7 +121,8 @@
                                 src="https://media.istockphoto.com/id/1865859468/photo/chole-bathure.jpg?s=612x612&w=0&k=20&c=zRaVBJ2IFP7HZufuHuiAHsIsIsWveAUmICazgPrGrn0="
                                 draggable="false"> </div>
                         <h2 style="color:  rgb(245, 37, 47); font-weight:bold;margin: 0;">Chole Bhaturer</h2>
-                        <p style="text-align: center; margin: 0;">Spicy chickpea curry served with deep-fried bread (bhature), garnished with onions and pickle.</p>
+                        <p style="text-align: center; margin: 0;">Spicy chickpea curry served with deep-fried bread
+                            (bhature), garnished with onions and pickle.</p>
                         <span>Price: 200 Rs</span>
                     </li>
                     <li class="card">
@@ -128,7 +130,8 @@
                                 src="https://media.istockphoto.com/id/1306083166/photo/masala-sin.jpg?s=612x612&w=0&k=20&c=DLrNS6s3FS6Eygy0vbEk0WY0ROMuEyNde6ttwUv_ObA="
                                 draggable="false"> </div>
                         <h2 style="color:  rgb(245, 37, 47); font-weight:bold;margin: 0;">Masala Dosa</h2>
-                        <p style="text-align: center; margin: 0;">A South Indian crepe made from fermented rice and lentil batter, filled with a spicy potato mixture.</p>
+                        <p style="text-align: center; margin: 0;">A South Indian crepe made from fermented rice and
+                            lentil batter, filled with a spicy potato mixture.</p>
                         <span>Price: 120 Rs</span>
                     </li>
                     <li class="card">
@@ -136,7 +139,8 @@
                                 src="https://media.istockphoto.com/id/1041657682/photo/vegetable-biriyani.jpg?s=612x612&w=0&k=20&c=wRe0C4sd5EOwqPcYKN68pVisImMx103vBmyFM2s3U1A="
                                 draggable="false"> </div>
                         <h2 style="color:  rgb(245, 37, 47); font-weight:bold;margin: 0;">Veg Biryani</h2>
-                        <p style="text-align: center; margin: 0;">Fragrant basmati rice cooked with assorted vegetables and aromatic spices.</p>
+                        <p style="text-align: center; margin: 0;">Fragrant basmati rice cooked with assorted vegetables
+                            and aromatic spices.</p>
                         <span>Price: 220 Rs</span>
                     </li>
                     <li class="card">
@@ -144,7 +148,8 @@
                                 src="https://media.istockphoto.com/id/1659939047/photo/lalmohan-or-gulab-jamun.jpg?s=612x612&w=0&k=20&c=gNa4LLPq4vK9pUOp3-7LOYVdKAPMxiGDz_HuMo3-HE8="
                                 draggable="false"> </div>
                         <h2 style="color:  rgb(245, 37, 47); font-weight:bold;margin: 0;">Gulab Jamun</h2>
-                        <p style="text-align: center; margin: 0;">Sweet dumplings soaked in sugar syrup, served warm.</p>
+                        <p style="text-align: center; margin: 0;">Sweet dumplings soaked in sugar syrup, served warm.
+                        </p>
                         <span>Price: 80 Rs</span>
                     </li>
                 </ul>
@@ -156,32 +161,33 @@
         <h1 class="h1" style="text-align: center;">Book Your Table Now..</h1>
         <div class="card1">
             <form onsubmit="data()">
-            <input type="text" id="name" placeholder="Enter yor name"/>
-            <input type="email" id="email" placeholder="Enter yor email id"/>
-            <input type="number" id="pnnum" placeholder="Enter yor phone num"/>
-            <input type="datetime-local" id="date" placeholder="Select date and time"/></br></br>
-            <button class="button1" type="submit"> submit</button>
-        </form>
+                <input type="text" id="name" placeholder="Enter yor name" />
+                <input type="email" id="email" placeholder="Enter yor email id" />
+                <input type="number" id="pnnum" placeholder="Enter yor phone num" />
+                <input type="datetime-local" id="date" placeholder="Select date and time" /></br></br>
+                <button class="button1" type="submit"> submit</button>
+            </form>
         </div>
     </section>
     <section id="contact">
 
         <h1 class="h1" style="text-align: center;">Contact Us</h1>
         <div style="text-align: center;">
-            <h3 style="color: rgb(245, 37, 47);">Are you a food lover?If your answer is yes, then this restaurant is for you.</br>
-            We serve food for reasonable prices.Its awsme, We know.</h3>
+            <h3 style="color: rgb(245, 37, 47);">Are you a food lover?If your answer is yes, then this restaurant is for
+                you.</br>
+                We serve food for reasonable prices.Its awsme, We know.</h3>
             <div>
                 <a style="text-decoration: none; color:black" href="tel:9876543210">Click to call</a>
                 </br>
                 <a style="text-decoration: none;color: black;" href="mailto:chauhankhushbu1998@gmail.com">mail us</a>
             </div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238132.67288444357!2d72.65747941989082!3d21.159440569199337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1719155199363!5m2!1sen!2sin"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238132.67288444357!2d72.65747941989082!3d21.159440569199337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1719155199363!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-            <!-- <p>call: -->
-           
+            <div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238132.67288444357!2d72.65747941989082!3d21.159440569199337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1719155199363!5m2!1sen!2sin"
+                    width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
         </div>
         <!-- </p> -->
     </section>
